Remove `NetworkIdString`
